--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "resetdb": "npx prisma migrate reset --force --skip-seed && npx prisma db push && npx prisma db seed"
   },
   "dependencies": {
     "@keyv/redis": "^5.1.3",
@@ -27,6 +28,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.17.1",
     "cache-manager": "^7.2.4",
     "mongoose": "^8.19.1",
