--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
+NODE_ENV=
+
 CLIENT_HOST=
 CLIENT_PORT=
 
@@ -22,4 +24,5 @@ REDIS_PORT=
 REDIS_URL=
 
 JWT_SECRET=
-JWT_EXPIRES_IN=
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
