--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
