feat: unite controller returned data structure, update Input component support show hide password, add account create, use user preferred theme/font + allow update theme/font

--- a/server/.env.example
+++ b/server/.env.example
@@ -26,3 +26,7 @@ REDIS_URL=
 JWT_SECRET=
 JWT_ACCESS_EXPIRES_IN=
 JWT_REFRESH_EXPIRES_IN=
+
+# Authenticate using app password => need 2 step verification
+GMAIL_USER=
+GMAIL_PASSWORD=
