feat: add OTP sending + forgot password logic, create CacheModule + CacheService that use native Nestjs CacheModule, update nest-cli to include html template in build folder

--- a/server/.env.example
+++ b/server/.env.example
@@ -27,6 +27,8 @@ JWT_SECRET=
 JWT_ACCESS_EXPIRES_IN=
 JWT_REFRESH_EXPIRES_IN=
 
-# Authenticate using app password => need 2 step verification
+# Xác thực bằng App Password của Gmail => Cần bật 2-Step Verification và tạo App Password
+# App Password != Mật khẩu tài khoản Gmail thông thường
+# Tham khảo hướng dẫn: https://support.google.com/accounts/answer/185833
 GMAIL_USER=
-GMAIL_PASSWORD=
+GMAIL_APP_PASSWORD=
