--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
