--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@prisma/client": "^6.19.0",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^7.2.4",
