--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "resetdb": "npx prisma migrate reset --force --skip-seed && npx prisma db push && npx prisma db seed"
+    "resetdb": "npx prisma migrate reset --force && npx prisma db push && npx prisma db seed"
   },
   "dependencies": {
     "@keyv/redis": "^5.1.3",
@@ -32,7 +32,7 @@
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
     "@paralleldrive/cuid2": "^3.0.4",
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
@@ -61,7 +61,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.19.0",
+    "prisma": "^7.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
