--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@types/diff-match-patch": "^1.0.36",
+    "@vercel/speed-insights": "^1.3.1",
     "diff-match-patch": "^1.0.5",
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
